chore: improve UI

--- a/Project.GongBang/html/teahwa/tae_room.html
+++ b/Project.GongBang/html/teahwa/tae_room.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
+
+    <style>
+
+    </style>
 </head>
 <body>
    
@@ -36,7 +40,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="d-flex justify-content-center">
-                        <img src="/Project.GongBang/img/room/tae/room1.png" alt="방 1" data-toggle="modal" data-target="#roomModal" data-room="1">
+                        <img  src="/Project.GongBang/img/room/tae/room1.png" alt="방 1" data-toggle="modal" data-target="#roomModal" data-room="1">
                         <div class="room-text">
                             <h2>방 1</h2>
                             <p>가격: 3억원</p>
