add adrress and phonenumber for each person

--- a/Project.GongBang/html/junghyun/hyun_room.html
+++ b/Project.GongBang/html/junghyun/hyun_room.html
@@ -14,6 +14,10 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">이정현</a>
+        <div class="contact-info">
+            <p>중개사 위치: 서울 종로구 삼일대로 30길 23</p>
+            <p>전화번호:010-xxxx-xxxx</p>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -87,10 +91,11 @@
             </div>
         </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/Project.GongBang/js/junghyun.js"></script>
+
+
 </body>
 </html>
