--- a/Project.GongBang/html/wonhyuk/won_room.html
+++ b/Project.GongBang/html/wonhyuk/won_room.html
@@ -14,6 +14,10 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">최원혁</a>
+        <div class="contact-info">
+            <P>서울 마포구 양화로 156 LG팰리스 지하1층 </P>
+            <p>전화번호:010-xxxx-xxxx</p>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
