--- a/Project.GongBang/html/main.html
+++ b/Project.GongBang/html/main.html
@@ -10,16 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="banner">
-    </div>
+    
     <div id="first_box_img">
         <script src="https://cdn.lordicon.com/lordicon.js"></script>
         <lord-icon
         src="https://cdn.lordicon.com/qeltvbrs.json"
         trigger="hover"
         stroke="bold"
-        style="width:350px;height:250px">
-    </lord-icon>
+        style="width:350px;height:250px;">
+        </lord-icon>
+        <h2 class="first_box_text">공 방</h2>
     </div>
     <div class="container">
         <h1>공인중개사 목록</h1>
