--- a/Project.GongBang/html/teahwa/tae_room.html
+++ b/Project.GongBang/html/teahwa/tae_room.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">김태화</a>
         <div class="contact-info">
-            <p>중개사 위치: 서울 종로구 삼일대로 30길 23</p>
+            <p>중개사 위치: 서울 용산구 한강로2가 312-4</p>
             <p>전화번호:010-xxxx-xxxx</p>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
