--- a/Project.GongBang/html/junghyun/hyun_room.html
+++ b/Project.GongBang/html/junghyun/hyun_room.html
@@ -33,7 +33,6 @@
         </div>
     </nav>
 
-    <!-- Main Content -->
     <div class="container mt-5">
         <h1>이정현님의 방 목록</h1>
         <div id="propertyCarousel" class="carousel slide" data-ride="carousel">
@@ -60,7 +59,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 추가 방 목록... -->
             </div>
             <a class="carousel-control-prev" href="#propertyCarousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -73,12 +71,11 @@
         </div>
     </div>
 
-    <!-- Modal -->
     <div class="modal fade" id="roomModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">방 상세 정보</h5> <!-- Updated title -->
+                    <h5 class="modal-title" id="exampleModalLabel">방 상세 정보</h5> 
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -86,27 +83,17 @@
                 <div class="modal-body">
                     <div id="modalImages" class="d-flex flex-wrap"></div>
                     <h4>&nbsp;&nbsp;상세 위치 및 가격 정보</h4>
-                    <p><span class="arrow"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 충청북도 청주시 서원구 개신동 708</p>
-                    <p><span class="arrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 월세 : 300 / 30</p>
-                    <p><span class="arrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 관리비 : 4만원</p>
+                    <p id="modalAddress"><span class="arrow"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶ 충청북도 청주시 서원구 개신동 708</p>
+                    <p id="modalMonthlyRent"><span class="arrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 월세 : 300 / 30</p>
+                    <p id="modalManagementFee"><span class="arrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 관리비 : 4만원</p>
                 </div>
                 <div id="modalOptions" class="mt-3">
                     <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;옵션 정보</h4>
                     <div class="d-flex justify-content-center">
-                        <span class="mr-3"><img src="/Project.GongBang/img/etc/침대.png" style="width: 50px; height: auto;"><br> 침대</span>
-                        <span class="mr-3"><img src="/Project.GongBang/img/etc/에어컨.png" style="width: 50px; height: auto;"><br> 에어컨</span>
-                        <span class="mr-3"><img src="/Project.GongBang/img/etc/씽크대.png" style="width: 50px; height: auto;"><br> 씽크대</span>
-                        <span class="mr-3"><img src="/Project.GongBang/img/etc/수납장.png" style="width: 50px; height: auto;"><br> 수납장</span>
-                        <span class="mr-3"><img src="/Project.GongBang/img/etc/세탁기.png" style="width: 50px; height: auto;"><br> 세탁기</span>
                     </div>
                 </div>
                 <hr>
                 <div id="modalDescription" class="mt-3">
-                    <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;상세 설명</h4>
-                    <p><span class="arrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 기존 원룸 대비 퀄리티가 정말 좋은 원룸이에요!</p>
-                    <p><span class="arrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 정말 관리 잘된 원룸이에요!</p>
-                    <p><span class="arrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 방 내부 공간, 화장실 또한 다른 원룸에 비해 넓게 빠졌어요!</p>
-                    <p><span class="arrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶</span> 귀갓길 걱정 없는 안전한 주거지역에 위치해 있어요!</p>
                 </div>                    
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
@@ -120,7 +107,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/Project.GongBang/js/junghyun.js"></script>
-
-
 </body>
 </html>
