--- a/Project.GongBang/html/main.html
+++ b/Project.GongBang/html/main.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     
+    <!-- lord.com 에서 아이콘 불러오는 부분 -->
     <div id="first_box_img">
         <script src="https://cdn.lordicon.com/lordicon.js"></script>
         <lord-icon
