--- a/Project.GongBang/html/review.html
+++ b/Project.GongBang/html/review.html
@@ -25,6 +25,7 @@
             <div class="form-group">
                 <label for="agentSelect">중개사 선택</label>
                 <select class="form-control" id="agentSelect" required>
+                    <option>선택</option>
                     <option value="이정현">이정현</option>
                     <option value="김태화">김태화</option>
                     <option value="최원혁">최원혁</option>
